# API_Marketing

./: .gitignore  README.md  pipeline_apple_search.py  pipeline_google_ads.py  pipeline_linkedin_ads.py  pipeline_meta_ads.py  pipeline_twitter_ads.py  prefect_deployment.yaml  pyproject.toml  sphinx-documentation.yaml
projects/: __init__.py
projects/apple_search/campaigns_management/: get_all_campaigns_apple_search.py  get_statistics_by_campaign_apple_search.py
projects/apple_search/settings/: settings_apple_search.py
projects/apple_search/utils/: create_final_output_apple_search.py  get_access_token_apple_search.py
projects/common/: utils.py
projects/common/data_manager/: postgres_connection.py  sql_server_connection.py  upload_outputs.py
projects/common/features_engineering/: create_dimension_by_campaign.py
projects/common/global_settings/: global_settings.py  mapping_campaign.py
projects/google_ads/campaigns_management/: get_accounts_google_ads.py  get_campaigns_google_ads.py
projects/google_ads/settings/: settings_google_ads.py
projects/google_ads/utils/: cleaning_campaign_name_google_ads.py  get_access_token_google_ads.py
projects/linkedin_ads/campaigns_management/: get_accounts_linkedin_ads.py  get_campaigns_information_linkedin_ads.py  get_insights_by_campaign_linkedin_ads.py
projects/linkedin_ads/settings/: settings_linkedin_ads.py
projects/linkedin_ads/utils/: create_final_output_linkedin_ads.py  get_access_token_linkedin_ads.py
projects/meta_ads/campaigns_management/: get_accounts_meta_ads.py  get_campaigns_meta_ads.py  (+1 more)
(+5 files in other folders)
